--- a/assets/css/frontend/style.css
+++ b/assets/css/frontend/style.css
@@ -598,8 +598,8 @@ section {
   overflow: hidden;
   border-radius: 10px;
   margin: 0 10px 40px 10px;
-  background: #fff;
-  box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
+  background: #edfeff;
+  box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.295);
   transition: all 0.3s ease-in-out;
 }
 #services .box:hover {
@@ -942,67 +942,49 @@ section {
 /* Team Section
 --------------------------------*/
 #team {
-  background: #fff;
-  padding: 60px 0;
-  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
+  padding: 60px 0 40px 0;
+  box-shadow: inset 0px 0px 12px 0px rgba(0, 0, 0, 0.1);
 }
-#team .member {
-  text-align: center;
-  margin-bottom: 20px;
+#team .box {
+  padding: 30px;
   position: relative;
-  border-radius: 50%;
   overflow: hidden;
+  border-radius: 10px;
+  margin: 0 10px 40px 10px;
+  background: #fff;
+  box-shadow: 0 10px 29px 0 rgba(68, 88, 144, 0.1);
+  transition: all 0.3s ease-in-out;
 }
-#team .member .member-info {
-  opacity: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+#team .box:hover {
+  transform: translateY(-5px);
+}
+#team .icon {
   position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-  transition: 0.2s;
+  left: -15px;
+  top: calc(50% - 32px);
 }
-#team .member .member-info-content {
-  margin-top: 50px;
-  transition: margin 0.2s;
+#team .icon i {
+  font-size: 64px;
+  line-height: 0;
+  transition: 0.5s;
 }
-#team .member:hover .member-info {
-  background: rgba(0, 62, 128, 0.7);
-  opacity: 1;
-  transition: 0.4s;
-}
-#team .member:hover .member-info-content {
-  margin-top: 0;
-  transition: margin 0.4s;
-}
-#team .member h4 {
+#team .title {
+  margin-left: 40px;
   font-weight: 700;
-  margin-bottom: 2px;
+  margin-bottom: 15px;
   font-size: 18px;
-  color: #fff;
 }
-#team .member span {
-  font-style: italic;
-  display: block;
-  font-size: 13px;
-  color: #fff;
+#team .title a {
+  color: #111;
 }
-#team .member .social {
-  margin-top: 15px;
+#team .box:hover .title a {
+  color: #3bc8cc;
 }
-#team .member .social a {
-  transition: 0.3s;
-  color: rgba(255, 255, 255, 0.7);
-}
-#team .member .social a:hover {
-  color: #fff;
-}
-#team .member .social i {
-  font-size: 18px;
-  margin: 0 2px;
+#team .description {
+  font-size: 14px;
+  margin-left: 40px;
+  line-height: 24px;
+  margin-bottom: 0;
 }
 
 /* Clients Section
@@ -1189,6 +1171,10 @@ section {
 #footer .footer-top {
   background: #217679;
   padding: 60px 0 30px 0;
+}
+#footer .footer-top .col-xs-6{
+  width: 50%;
+  
 }
 #footer .footer-top .footer-info {
   margin-bottom: 30px;
